apps/auth/authelia/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: authelia
  namespace: authelia
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      # work around authelia bug with ENV var parsing
      enableServiceLinks: false
      # don't schedule more than 1 replica per node
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - authelia
      priorityClassName: high-priority
      containers:
        - name: authelia
          image: ghcr.io/authelia/authelia:4.39.28
          imagePullPolicy: IfNotPresent
          command:
            - authelia
          args:
            - --config=/config/configuration.yml
          ports:
            - name: http
              containerPort: 9091
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: config
              mountPath: /config
            - name: secrets
              readOnly: true
              mountPath: /config/secrets
      volumes:
        - name: config
          configMap:
            name: config
        - name: secrets
          secret:
            secretName: secrets
